<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:text="@string/tv_start_time"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_start_time"
            app:layout_constraintEnd_toStartOf="@+id/bt_start_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bt_start_time" />

        <Button
            android:id="@+id/bt_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background_blue"
            android:onClick="setStartTime"
            android:text=" 0 : 00 "
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/tv_end_time"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_end_time"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/bt_end_time" />

        <Button
            android:id="@+id/bt_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background_blue"
            android:onClick="setEndTime"
            android:text=" 0 : 00 "
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_time" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv_alarm_count"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_set_count"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/bt_set_count" />

        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="onBackButtonClick"
            android:text="@string/bt_back"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/bt_OK"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_media" />

        <Button
            android:id="@+id/bt_OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onOKButtonClick"
            android:text="@string/bt_OK"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/bt_back" />

        <Button
            android:id="@+id/bt_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:onClick="onDeleteButtonClick"
            android:text="@string/bt_delete"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_OK" />

        <Switch
            android:id="@+id/sw_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_end_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_start_time"
            app:layout_constraintTop_toBottomOf="@+id/bt_start_time" />

        <Button
            android:id="@+id/bt_set_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background_blue"
            android:onClick="setCountButton"
            android:text="5"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_end_time" />

        <Button
            android:id="@+id/bt_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="selectMusicButton"
            android:text="Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_set_count" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_alarm_media"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/bt_media"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/bt_media" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_switch_connect"
            app:layout_constraintBottom_toTopOf="@+id/sw_connect"
            app:layout_constraintEnd_toEndOf="@+id/sw_connect"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="@+id/sw_connect" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>